--- a/app_/views/index.ejs
+++ b/app_/views/index.ejs
@@ -570,10 +570,10 @@
                 <p class="grid gap-3 sm:grid-cols-1 md:grid-cols-2">
                   <input class="bg-transparent rounded-md outline-none focus:ring-4 ring-1 py-1 px-2" type="text" name="name" id="firstname" placeholder="First Nane" required>
                   <input class="bg-transparent rounded-md outline-none focus:ring-4 ring-1 py-1 px-2" type="text" name="lastname" id="lastname" placeholder="Last Name" required>
-                  <input class="bg-transparent rounded-md outline-none focus:ring-4 ring-1 py-1 px-2 col-span-1 md:col-span-2" type="email" name="email" id="email" placeholder="My Email" required >
+                  <input class="bg-transparent rounded-md outline-none focus:ring-4 ring-1 py-1 px-2 col-span-1 md:col-span-2" type="email" name="email" id="email" placeholder="Your Email" required >
                 </p>
                 <p>
-                  <textarea class="bg-transparent rounded-md outline-none focus:ring-4 ring-1 py-1 px-2 w-full my-4" name="msg" id="msg" rows="10" placeholder="My message..." required></textarea>
+                  <textarea class="bg-transparent rounded-md outline-none focus:ring-4 ring-1 py-1 px-2 w-full my-4" name="msg" id="msg" rows="10" placeholder="Your message..." required></textarea>
                 </p>
                 <p>
                   <button class="w-full py-2 px-5 border-2 border-blue-400 rounded-md text-xl font-light hover:text-blue-600 hover:font-semibold">Send message</button>
