--- a/app_/views/portofolio.ejs
+++ b/app_/views/portofolio.ejs
@@ -349,40 +349,40 @@
               <div>
                 <div class="py-4">
                   <h1 class="text-lg pl-3 py-3">HTML</h1>
-                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                    <div class="bg-blue-400 dark:bg-blue-700 w-[95%] rounded-xl m-[0px] text-center font-bold">95%</div>
+                  <div class="bg-gray-700 dark:bg-gray-200 rounded-xl border-2 text-sm">
+                    <div class="bg-green-400 dark:bg-green-700 w-[95%] rounded-xl m-[0px] text-center font-bold">95%</div>
                   </div>
                 </div>
                 <div class="py-4">
                   <h1 class="text-lg pl-3 py-3">CSS</h1>
-                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                    <div class="bg-blue-400 dark:bg-blue-700 w-[60%] rounded-xl m-[0px] text-center font-bold">60%</div>
+                  <div class="bg-gray-700 dark:bg-gray-200 rounded-xl border-2 text-sm">
+                    <div class="bg-green-400 dark:bg-green-700 w-[60%] rounded-xl m-[0px] text-center font-bold">60%</div>
                   </div>
                 </div>
                 <div class="py-4">
                   <h1 class="text-lg pl-3 py-3">Javascript</h1>
-                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                    <div class="bg-blue-400 dark:bg-blue-700 w-[99%] rounded-xl m-[0px] text-center font-bold">99%</div>
+                  <div class="bg-gray-700 dark:bg-gray-200 rounded-xl border-2 text-sm">
+                    <div class="bg-green-400 dark:bg-green-700 w-[99%] rounded-xl m-[0px] text-center font-bold">99%</div>
                   </div>
                 </div>
               </div>
               <div>
                 <div class="py-4">
                   <h1 class="text-lg pl-3 py-3">PHP</h1>
-                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                    <div class="bg-blue-400 dark:bg-blue-700 w-[99%] rounded-xl m-[0px] text-center font-bold">99%</div>
+                  <div class="bg-gray-700 dark:bg-gray-200 rounded-xl border-2 text-sm">
+                    <div class="bg-green-400 dark:bg-green-700 w-[99%] rounded-xl m-[0px] text-center font-bold">99%</div>
                   </div>
                 </div>
                 <div class="py-4">
                   <h1 class="text-lg pl-3 py-3">Node</h1>
-                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                    <div class="bg-blue-400 dark:bg-blue-700 w-[90%] rounded-xl m-[0px] text-center font-bold">90%</div>
+                  <div class="bg-gray-700 dark:bg-gray-200 rounded-xl border-2 text-sm">
+                    <div class="bg-green-400 dark:bg-green-700 w-[90%] rounded-xl m-[0px] text-center font-bold">90%</div>
                   </div>
                 </div>
                 <div class="py-4">
                   <h1 class="text-lg pl-3 py-3">Laravel</h1>
-                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                    <div class="bg-blue-400 dark:bg-blue-700 w-[65%] rounded-xl m-[0px] text-center font-bold">65%</div>
+                  <div class="bg-gray-700 dark:bg-gray-200 rounded-xl border-2 text-sm">
+                    <div class="bg-green-400 dark:bg-green-700 w-[65%] rounded-xl m-[0px] text-center font-bold">65%</div>
                   </div>
                 </div>
               </div>
@@ -391,47 +391,47 @@
               <div>
                 <div class="py-4">
                   <h1 class="text-lg pl-3 py-3">Jquery</h1>
-                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                    <div class="bg-blue-400 dark:bg-blue-700 w-[90%] rounded-xl m-[0px] text-center font-bold">90%</div>
+                  <div class="bg-gray-700 dark:bg-gray-200 rounded-xl border-2 text-sm">
+                    <div class="bg-green-400 dark:bg-green-700 w-[90%] rounded-xl m-[0px] text-center font-bold">90%</div>
                   </div>
                 </div>
                 <div class="py-4">
                   <h1 class="text-lg pl-3 py-3">ReactJS</h1>
-                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                    <div class="bg-blue-400 dark:bg-blue-700 w-[95%] rounded-xl m-[0px] text-center font-bold">95%</div>
+                  <div class="bg-gray-700 dark:bg-gray-200 rounded-xl border-2 text-sm">
+                    <div class="bg-green-400 dark:bg-green-700 w-[95%] rounded-xl m-[0px] text-center font-bold">95%</div>
                   </div>
                 </div>
                 <div class="py-4">
                   <h1 class="text-lg pl-3 py-3">Bootstrap</h1>
-                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                    <div class="bg-blue-400 dark:bg-blue-700 w-[80%] rounded-xl m-[0px] text-center font-bold">80%</div>
+                  <div class="bg-gray-700 dark:bg-gray-200 rounded-xl border-2 text-sm">
+                    <div class="bg-green-400 dark:bg-green-700 w-[80%] rounded-xl m-[0px] text-center font-bold">80%</div>
                   </div>
                 </div>
               </div>
               <div>
                 <div class="py-4">
                   <h1 class="text-lg pl-3 py-3">Tailwindcss</h1>
-                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                    <div class="bg-blue-400 dark:bg-blue-700 w-[97%] rounded-xl m-[0px] text-center font-bold">97%</div>
+                  <div class="bg-gray-700 dark:bg-gray-200 rounded-xl border-2 text-sm">
+                    <div class="bg-green-400 dark:bg-green-700 w-[97%] rounded-xl m-[0px] text-center font-bold">97%</div>
                   </div>
                 </div>
                 <div class="py-4">
                   <h1 class="text-lg pl-3 py-3">C#</h1>
-                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                    <div class="bg-blue-400 dark:bg-blue-700 w-[90%] rounded-xl m-[0px] text-center font-bold">90%</div>
+                  <div class="bg-gray-700 dark:bg-gray-200 rounded-xl border-2 text-sm">
+                    <div class="bg-green-400 dark:bg-green-700 w-[90%] rounded-xl m-[0px] text-center font-bold">90%</div>
                   </div>
                 </div>
                 <div class="py-4">
                   <h1 class="text-lg pl-3 py-3">Typescript</h1>
-                  <div class="bg-slate-700 dark:bg-slate-200 rounded-xl border-2 text-sm">
-                    <div class="bg-blue-400 dark:bg-blue-700 w-[95%] rounded-xl m-[0px] text-center font-bold">95%</div>
+                  <div class="bg-gray-700 dark:bg-gray-200 rounded-xl border-2 text-sm">
+                    <div class="bg-green-400 dark:bg-green-700 w-[95%] rounded-xl m-[0px] text-center font-bold">95%</div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div>
+        <!-- <div>
           <h1 class="text-4xl py-6 text-center mt-10">Professional Skills</h1>
           <div class="flex items-center justify-center flex-wrap">
 
@@ -460,7 +460,7 @@
             </div>
 
           </div>
-        </div>
+        </div> -->
       </div>
 
       <div id="exps" class="aspect-[2/1] container mx-auto grid items-center justify-center grid-cols-1 px-3 py-4 text-gray-700 dark:text-gray-200">
@@ -468,7 +468,7 @@
           <div>
             <h1 class="text-4xl py-6 text-center">Education</h1>
             <div class="flex items-center justify-center flex-wrap">
-              <div class="bg-gray-200 dark:bg-gray-700 rounded-lg p-4">
+              <div class="bg-blue-200 dark:bg-blue-600 rounded-lg p-4">
                 <h1 class="text-2xl">IT Techniques from <span class="font-extralight">Cégep André-Laurendau</span></h1>
                 <h4 class="py-4 font-extralight text-xl">2024 - 2027</h4>
                 <p class="text-lg tracking-wide">
@@ -480,22 +480,22 @@
           <div>
             <h1 class="text-4xl py-6 text-center">Projects</h1>
             <div class="flex gap-3 items-center justify-center flex-wrap">
-              <div class="bg-gray-200 dark:bg-gray-700 rounded-lg py-4 px-16 my-4">
+              <div class="bg-transparent border-2 border-gray-600 dark:border-gray-500 rounded-lg py-4 px-16 my-4">
                 <div class="flex gap-3 items-center">
                   <img class="size-10" src="./imgs/pronote_favicon-32x32.png" alt="pronote-logo">
                   <h1 class="text-3xl font-light">Pronote</h1>
                 </div>
                 <div class="flex items-center justify-center">
-                  <button class="dark:bg-transparent hover:dark:bg-gray-800 hover:border-transparent bg-gray-700 text-gray-200 py-2 px-8 my-4 rounded-lg font-light text-xl border-2"><a href="http://technopro.rf.gd/" target="_blank">Visit</a></button>
+                  <button class="hover:bg-gray-700 hover:dark:bg-gray-500 hover:border-transparent bg-gray-600 dark:bg-gray-600 text-gray-200 py-2 px-8 my-4 rounded-lg font-light text-xl"><a href="http://technopro.rf.gd/" target="_blank">Visit</a></button>
                 </div>
               </div>
-              <div class="bg-gray-200 dark:bg-gray-700 rounded-lg py-4 px-16 my-4">
+              <div class="bg-transparent border-2 border-gray-600 dark:border-gray-500 rounded-lg py-4 px-16 my-4">
                 <div class="flex gap-3 items-center">
                   <img class="size-10" src="https://static.vecteezy.com/system/resources/previews/009/341/840/original/time-clock-icon-sign-design-free-png.png" alt="pronote-logo">
                   <h1 class="text-3xl font-light">InTime</h1>
                 </div>
                 <div class="flex items-center justify-center">
-                  <button class="dark:bg-transparent hover:dark:bg-gray-800 hover:border-transparent bg-gray-700 text-gray-200 py-2 px-8 my-4 rounded-lg font-light text-xl border-2"><a href="https://intime-tech.onrender.com/" target="_blank">Visit</a></button>
+                  <button class="hover:bg-gray-700 hover:dark:bg-gray-500 hover:border-transparent bg-gray-600 dark:bg-gray-600 text-gray-200 py-2 px-8 my-4 rounded-lg font-light text-xl"><a href="https://intime-tech.onrender.com/" target="_blank">Visit</a></button>
                 </div>
               </div>
             </div>
@@ -540,15 +540,15 @@
       <div id="contact" class="aspect-[16/9] container mx-auto grid items-center justify-center grid-cols-1 px-3 py-4 text-gray-700 dark:text-gray-200">
         <div>
           <h1 class="text-4xl py-6 mb-5 text-center tracking-wider">Contact me</h1>
-          <div class="flex items-center justify-around gap-3 flex-wrap">
-            <div class="rounded-lg border-2 border-gray-300 dark:border-transparent dark:bg-slate-600 text-center w-72 py-5">
+          <div class="flex items-center justify-center gap-3 flex-wrap">
+            <div class="rounded-lg border-2 border-gray-300 dark:border-gray-500 text-center w-72 py-5">
               <div class="material-symbols-outlined">pin_drop</div>
               <h2 class="py-4 text-2xl">Address</h2>
               <div>
                 <p>9199, Rue Airlie, Lasalle, Montréal QC</p>
               </div>
             </div>
-            <div class="rounded-lg border-2 border-gray-300 dark:border-transparent dark:bg-slate-600 text-center w-72 py-5">
+            <div class="rounded-lg border-2 border-gray-300 dark:border-gray-500 text-center w-72 py-5">
               <div class="material-symbols-outlined">mail</div>
               <h2 class="py-4 text-2xl">Email</h2>
               <div>
@@ -556,7 +556,7 @@
                 <p><a href="mailto:antiquesclub@gmail.com">antiquesclub@gmail.com</a></p>
               </div>
             </div>
-            <div class="rounded-lg border-2 border-gray-300 dark:border-transparent dark:bg-slate-600 text-center w-72 py-5">
+            <div class="rounded-lg border-2 border-gray-300 dark:border-gray-500 text-center w-72 py-5">
               <div class="material-symbols-outlined">call</div>
               <h2 class="py-4 text-2xl">Phone</h2>
               <div>
@@ -576,7 +576,7 @@
                   <textarea class="bg-transparent rounded-md outline-none focus:ring-4 ring-1 py-1 px-2 w-full my-4" name="msg" id="msg" rows="10" placeholder="Your message..." required></textarea>
                 </p>
                 <p>
-                  <button class="w-full py-2 px-5 border-2 border-blue-400 rounded-md text-xl font-light hover:text-blue-600 hover:font-semibold">Send message</button>
+                  <button class="w-full py-2 px-5 bg-blue-700 hover:bg-blue-600 text-white rounded-md text-xl font-light">Send message</button>
                 </p>
               </form>
             </div>
