--- a/app_/views/portofolio.ejs
+++ b/app_/views/portofolio.ejs
@@ -568,7 +568,7 @@
             <div>
               <form action="" method="post">
                 <p class="grid gap-3 sm:grid-cols-1 md:grid-cols-2">
-                  <input class="bg-transparent rounded-md outline-none focus:ring-4 ring-1 py-1 px-2" type="text" name="name" id="firstname" placeholder="First Nane" required>
+                  <input class="bg-transparent rounded-md outline-none focus:ring-4 ring-1 py-1 px-2" type="text" name="name" id="firstname" placeholder="First Name" required>
                   <input class="bg-transparent rounded-md outline-none focus:ring-4 ring-1 py-1 px-2" type="text" name="lastname" id="lastname" placeholder="Last Name" required>
                   <input class="bg-transparent rounded-md outline-none focus:ring-4 ring-1 py-1 px-2 col-span-1 md:col-span-2" type="email" name="email" id="email" placeholder="Your Email" required >
                 </p>
