--- a/app_/views/portofolio.ejs
+++ b/app_/views/portofolio.ejs
@@ -564,7 +564,7 @@
               </div>
             </div>
           </div>
-          <div class="grid gap-5 py-10 my-5 grid-cols-1 md:grid-cols-2">
+          <div class="grid gap-5 py-10 mt-5 grid-cols-1 md:grid-cols-2">
             <div>
               <form action="" method="post">
                 <p class="grid gap-3 sm:grid-cols-1 md:grid-cols-2">
