--- a/app_/views/portofolio.ejs
+++ b/app_/views/portofolio.ejs
@@ -537,7 +537,7 @@
         </div>
       </div>
 
-      <div id="contact" class="aspect-[16/9] container mx-auto grid items-center justify-center grid-cols-1 px-3 py-4 text-gray-700 dark:text-gray-200">
+      <div id="contact" class="aspect-[16/9] container mx-auto grid items-center justify-center grid-cols-1 px-3 py-4 mb-[-2rem] text-gray-700 dark:text-gray-200">
         <div>
           <h1 class="text-4xl py-6 mb-5 text-center tracking-wider">Contact me</h1>
           <div class="flex items-center justify-center gap-3 flex-wrap">
