--- a/app_/views/system_notice/page_not_found.ejs
+++ b/app_/views/system_notice/page_not_found.ejs
@@ -1,7 +1,18 @@
 
-
-<div>
-    404
-    <br>
-    Page Not Found
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/app.css">
+    <title>Page Not Found</title>
+</head>
+<body>
+    <div class="fixed w-full h-full flex items-center justify-center">
+        <div class="p-5 rounded-lg bg-gray-800 text-gray-200 text-2xl">
+            <p>404</p>
+            <p>Oops! Page not found!</p>
+        </div>
+    </div>
+</body>
+</html>
