--- a/app_/views/system_notice/page_not_found.ejs
+++ b/app_/views/system_notice/page_not_found.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="fixed w-full h-full flex items-center justify-center">
-        <div class="p-6 rounded-lg bg-gray-800 text-gray-200 text-2xl">
+        <div class="p-6 rounded-lg bg-gray-800 text-center text-gray-200 text-3xl">
             <p>404</p>
             <p>Oops! Page not found!</p>
         </div>
