--- a/app_/views/system_notice/page_not_found.ejs
+++ b/app_/views/system_notice/page_not_found.ejs
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../imgs/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles/app.css">
     <title>Page Not Found</title>
 </head>
 <body>
     <div class="fixed w-full h-full flex items-center justify-center">
-        <div class="p-6 rounded-lg bg-gray-800 text-center text-gray-200 text-3xl">
+        <div class="text-center text-gray-400 text-3xl">
             <p>404</p>
             <p>Oops! Page not found!</p>
         </div>
