--- a/app_/views/system_notice/page_not_found.ejs
+++ b/app_/views/system_notice/page_not_found.ejs
@@ -11,7 +11,7 @@
 <body>
     <div class="fixed w-full h-full flex items-center justify-center">
         <div class="text-center text-gray-400 text-3xl">
-            <p>404</p>
+            <p class="font-semibold">404</p>
             <p>Oops! Page not found!</p>
         </div>
     </div>
