--- a/app_/views/system_notice/page_not_found.ejs
+++ b/app_/views/system_notice/page_not_found.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../imgs/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="../styles/app.css">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Page Not Found</title>
 </head>
 <body>
