--- a/app_/views/admin/login.ejs
+++ b/app_/views/admin/login.ejs
@@ -15,10 +15,10 @@
                 <img class="size-16" src="../../imgs/logo.png" alt="logo">
             </p>
             <p>
-                <input class="bg-transparent p-2 text-gray-600 ring-1 focus:ring-blue-700 focus:ring-2 rounded-md my-2 ring-blue-500 outline-none" type="password" name="access" placeholder="Access code" required>
+                <input class="bg-transparent p-2 text-center text-gray-600 ring-1 focus:ring-blue-700 focus:ring-2 rounded-md my-2 ring-blue-500 outline-none" type="password" name="access" placeholder="Access code" required>
             </p>
             <p>
-                <input class="bg-transparent p-2 text-gray-600 ring-1 focus:ring-blue-700 focus:ring-2 rounded-md my-2 ring-blue-500 outline-none" type="password" name="password" placeholder="Password" required>
+                <input class="bg-transparent p-2 text-center text-gray-600 ring-1 focus:ring-blue-700 focus:ring-2 rounded-md my-2 ring-blue-500 outline-none" type="password" name="password" placeholder="Password" required>
             </p>
             <p>
                 <button id="btn-login" class="rounded-md py-2 px-4 my-4 border-2 border-blue-600 text-blue-500 hover:border-blue-700 hover:text-blue-700 w-full">Sign in</button>
