--- a/app_/views/portofolio.ejs
+++ b/app_/views/portofolio.ejs
@@ -590,7 +590,7 @@
       <script>
         (g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})({
           key: "AIzaSyDGpdMFzdyJkSOP9YUSgpTH7apoJVQ2ZQA",
-          v: "weekly",
+          v: "beta",
           // Use the 'v' parameter to indicate the version to use (weekly, beta, alpha, etc.).
           // Add other bootstrap parameters as needed, using camel case.
         });
@@ -603,15 +603,13 @@
           const { Map } = await google.maps.importLibrary("maps");
 
           map = new Map(document.getElementById("map"), {
-            center: { lat: -34.397, lng: 150.644 },
-            zoom: 8,
+            center: { lat: 45.4225282, lng: -73.6373021 },
+            zoom: 17,
           });
         }
 
         initMap();
       </script>
-
-      <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGpdMFzdyJkSOP9YUSgpTH7apoJVQ2ZQA&callback=myMap"></script> -->
 
     </main>
   </body>
