--- a/app_/views/admin/login.ejs
+++ b/app_/views/admin/login.ejs
@@ -10,18 +10,22 @@
 </head>
 <body>
     <div class="w-full h-full bg-gray-800 fixed flex items-center justify-center">
-        <form class="rounded-lg shadow-xl px-4 py-8 bg-white" action="/profile/admin/login" method="post">
-            <p class="flex items-center justify-center mt-[-1rem] mb-4">
-                <img class="size-16" src="../../imgs/logo.png" alt="logo">
+        <form class="rounded-lg w-52 shadow-xl px-4 py-8 bg-white" action="/profile/admin/login" method="post">
+            <% if (msg.active) { %>
+                <p class="p-2 mb-2 text-center bg-red-200 text-red-600 font-semibold rounded-lg"><%= msg.content %></p>
+            <% }else{ %>
+                <p class="flex items-center justify-center mt-[-1rem] mb-4">
+                    <img class="size-8" src="../../imgs/logo.png" alt="logo">
+                </p>
+            <% } %>
+            <p>
+                <input class="bg-transparent w-full p-2 text-center text-gray-600 ring-1 focus:ring-blue-300 focus:ring-2 rounded-md my-2 ring-blue-500 outline-none" type="password" name="access" placeholder="Access code" required>
             </p>
             <p>
-                <input class="bg-transparent p-2 text-center text-gray-600 ring-1 focus:ring-blue-700 focus:ring-2 rounded-md my-2 ring-blue-500 outline-none" type="password" name="access" placeholder="Access code" required>
+                <input class="bg-transparent w-full p-2 text-center text-gray-600 ring-1 focus:ring-blue-300 focus:ring-2 rounded-md my-2 ring-blue-500 outline-none" type="password" name="password" placeholder="Password" required>
             </p>
             <p>
-                <input class="bg-transparent p-2 text-center text-gray-600 ring-1 focus:ring-blue-700 focus:ring-2 rounded-md my-2 ring-blue-500 outline-none" type="password" name="password" placeholder="Password" required>
-            </p>
-            <p>
-                <button id="btn-login" class="rounded-md py-2 px-4 my-4 border-2 border-blue-600 text-blue-500 hover:border-blue-700 hover:text-blue-700 w-full">Sign in</button>
+                <button id="btn-login" class="rounded-md py-2 px-4 mt-4 border-2 border-blue-600 text-blue-500 hover:border-blue-700 hover:text-blue-700 w-full">Sign in</button>
             </p>
         </form>
     </div>
