--- a/app_/views/contact/index.ejs
+++ b/app_/views/contact/index.ejs
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Admin | Dashboard</title>
+    <title>Admin | Contact</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="shortcut icon" href="../../imgs/logo.png" type="image/x-icon">
@@ -14,6 +14,6 @@
 <body x-data="{ dark: true }" x-bind:class="dark?'dark':'light'">
     <%- include('../layouts/header_menu.ejs') %>
 
-    <h1>ADMIN DASHBOARD</h1>
+    <h1>ADMIN CONTACT</h1>
 </body>
 </html>
